# otp-based-authentication-system

./: .gitignore  Dockerfile  README.md  Ubaar.postman_collection.json  db.sqlite3  docker-compose.yml  pyproject.toml  pytest.ini
project/: settings.py  urls.py
users/: models.py  otp_service.py  serializers.py  tests.py  throttles.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py
